lab1/Test/L1-A-12-10.output
Error Type B at Line 1
Error Type A at Line 5
Error Type A at Line 7
Error Type A at Line 8
Error Type B at Line 11
Error Type A at Line 12
Error Type B at Line 18
Error Type A at Line 23
Error Type B at Line 28
