lab1/Test/L1-A-12-10.cmm
OthVH5iEnWyKH0WK0 , U1 [ 1119876506 ] 

;
int NoEr84yicYN7U0 ( ) {
%  MEDtszxf_cELk ;
  if ( c8dZqpKTw )   J ;
else   if ( UbQ3 ) ^  if ( Ux4ZtJg_F9r ) {
    niQmFckRlrzg4HO5jg8 ;%
    while ( p9ly )     JXw9mhWtR ;

    ;
  }else   return DoYA7quRrNiJuAGB ^;



}
int 
struct {
  int hNAkt ;
  int Oo_lEg ;
  struct Sf9wbyxg {
  }GakONkTnLyuho2 ;
  int #fReY ;
  int Fm = MhexwOqg77g = kESrSJVS6pDrvwE || jPSwg0dA7SoFEEax_zc1 
    < iTsuXB + muvlZrXQg / - ( IjH8O1_dCPI_m = AUJy && 
    q != C7 * ! lPsA3NIr4Zw6 [ e3KWs4DIC || Dp2 && GiIII8Ncx8WrJz 
    >= J387FhZYhhAs - w8OdYVIK1FQS ( lKb , IIs3WtFiHrCtt 
    - BxhxbN ( == EPcIkHr + NngY4KlM1 / 284115744.1948464430 
    . AK1ZLebN_3iUc0 ) . THcxWI5KcajS64k543 > - qRoJ8QvM1BLxfVEU 
    * - 1193960472 . HKfJauBEiRZHmIn891lD <= ! ! - SOVg2wrvF9D1JmTlkEh 
    ( ) . BT3N8W5UujPJmu ) ] ) , hsSVt9WJChXivZ_J1hPp 
    ;
}raT2C ( struct wZRv uha3eazg5UgY , int tXT ) {
}
